--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
 body {
     background-color: #FFFFFE;
 }
+
+#main-wrapper {
+    width: 100vw;
+    height: 50vh;
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.card {
+    width: 275px;
+    height: 320px;
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-right: 2em;
+}
+
+.icon-container {
+    background-color: #3DA9FC ;
+    color: #FFFFFE;
+    font-size: 3em;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.card-title {
+    font-size: 1.5em;
+    font-weight: 600;
+    font-family: sans-serif, Poppins;
+    color: #094067;
+}
+
+
+
+
+
