--- a/style.css
+++ b/style.css
@@ -14,14 +14,16 @@ body {
 
 .card {
     width: 275px;
-    height: 320px;
-    border: 1px solid red;
+    height: 300px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     margin-right: 2em;
+    padding: 20px;
+    box-shadow: 0px 7px 29px -3px #64646F
 }
 
 .icon-container {
@@ -42,6 +44,13 @@ body {
     font-weight: 600;
     font-family: sans-serif, Poppins;
     color: #094067;
+    margin-bottom: -10px;
+}
+
+.main-text {
+    font-size: 1.2em;
+    font-family: sans-serif, Nato Sans;
+    color: #5F6C7B;
 }
 
 
