--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ body {
 }
 
 #main-wrapper {
-    height: 70vh;
+    height: 100vh;
     width: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     flex-direction: row;
     margin: 0 auto;
 }
@@ -15,6 +16,7 @@ body {
 @media screen and (max-width: 1024px) {
     #main-wrapper {
         display: flex;
+        flex-wrap: wrap;
         height: fit-content;
         flex-direction: column;
         justify-content: space-between;
@@ -33,16 +35,13 @@ body {
 @media screen and (max-width: 480px) {
     #main-wrapper {
         display: flex;
-        height: fit-content;
+        height: 75vh;
         flex-direction: column;
         justify-content: space-around;
         margin: 0 auto;
     }
-
-    .card {
-        margin: 1em;
-    }
 }
+
 
 .card {
     width: 275px;
