--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ body {
     }
 }
 
-
 .card {
     width: 275px;
     height: 300px;
@@ -56,6 +55,8 @@ body {
     padding: 20px;
     box-shadow: 0px 7px 29px -3px #64646F;
     background-color: #FFFFFE;
+    position: relative;
+    overflow: hidden;
 }
 
 .card:hover {
@@ -69,6 +70,7 @@ body {
 
 .icon-container {
     background-color: #3DA9FC ;
+    z-index: 1;
     color: #FFFFFE;
     font-size: 3em;
     width: 80px;
@@ -94,7 +96,11 @@ body {
     color: #5F6C7B;
 }
 
-
-
-
+.card span {
+    position: absolute;
+    top: 0;
+    left: 1;
+    right: 0;
+    bottom: auto;
+}
 
